# cosmin-assistant

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISION_LOG.md  METHOD_SCOPE.md  SUPPORTED_PROFILES.md  USER_GUIDE.md
docs/reference/: cosmin_method_summary.md  cosmin_rule_inventory.yaml  table_output_spec.md
references/: Table-Templates-in-Word.docx
src/cosmin_assistant/: __init__.py
src/cosmin_assistant/cli/: __init__.py  app.py  batch_app.py  pipeline.py  property_activation.py  review_app.py  tables_app.py
src/cosmin_assistant/cosmin_rob/: __init__.py  aggregation.py  box10_responsiveness.py  box1_prom_development.py  box2_content_validity.py  box3_structural_validity.py  box4_internal_consistency.py  box5_cross_cultural_validity.py  box6_reliability.py  box7_measurement_error.py  box8_criterion_validity.py  box9_hypotheses_testing.py  item_utils.py  models.py
src/cosmin_assistant/extract/: __init__.py  context_extractor.py  context_models.py  markdown_parser.py  provenance.py  spans.py  statistics_extractor.py  statistics_models.py
src/cosmin_assistant/grade/: __init__.py  models.py  modified_grade.py
src/cosmin_assistant/measurement_rating/: __init__.py  common.py  construct_validity.py  criterion_validity.py  cross_cultural_validity.py  internal_consistency.py  measurement_error.py  models.py  reliability.py  responsiveness.py  structural_validity.py
src/cosmin_assistant/models/: __init__.py  base.py  entities.py  enums.py
src/cosmin_assistant/profiles/: __init__.py  activity_monitor.py  base.py  constants.py  pbom.py  prom.py  registry.py
src/cosmin_assistant/review/: __init__.py  models.py  override_flow.py
src/cosmin_assistant/synthesize/: __init__.py  first_pass.py  models.py
src/cosmin_assistant/tables/: __init__.py  docx_stub.py  docx_tables.py  intermediate_models.py  output_builders.py  reviewed_artifact_loader.py  reviewed_table_export.py  table_builders.py
src/cosmin_assistant/utils/: __init__.py  runtime.py
tests/: test_batch_cli_scaffold.py  test_cli_e2e.py  test_context_extractor.py  test_cosmin_rob_boxes.py  test_cosmin_rob_infrastructure.py  test_cosmin_rob_remaining_boxes.py  test_docx_table_export.py  test_generic_routing_holdout.py  test_markdown_parser.py  test_measurement_rating.py  test_measurement_rating_remaining.py  test_modified_grade.py  test_profiles_system.py  test_review_override_flow.py  test_runtime_hardening.py  test_statistics_extractor.py  test_synthesis_first_pass.py  test_table_builders.py  test_task17c_regressions.py  test_task20a_wave_tiering.py
tests/fixtures/markdown/: e2e_prom_article.md  holdout_generic_validation.md  statistics_noisy_patterns.md  statistics_table_alpha.md
tests_scaffold/: test_models_core.py  test_scaffold_smoke.py
tests_scaffold/fixtures/markdown/: context_ambiguous.md  context_missing_fields.md  context_multiple_subsamples.md  context_straightforward.md  nested_repeated_headings.md
